Added TestCases and converted instituteCategoryType SQL to Mongo. changes in daoImpl, and repository.